#659 Fix arrow tool alignment.

--- a/src/stylesheets/components/_toolbar.scss
+++ b/src/stylesheets/components/_toolbar.scss
@@ -70,6 +70,7 @@
   }
 
   .tool-group {
+    display: flex;
     white-space: nowrap;
 
     & + .tool-group {
